--- a/responsive-dev-path/404-not-found-master/index.html
+++ b/responsive-dev-path/404-not-found-master/index.html
@@ -34,7 +34,7 @@
     </div>
   </div>
   <div class="attribution">
-    created by <a href="">Samah</a> - devChallenges.io
+    <p>created by <a href="https://github.com/SamahTT">Samah</a> - devChallenges.io</p>
   </div>
 </body>
 
